--- a/apps/web/test7.html
+++ b/apps/web/test7.html
@@ -29,7 +29,7 @@
       </button>
     </div>
     <div id="animation-target"></div>
-    <div id="result-stats" style="max-width: 1000px; text-align: center;"></div>
+    <div id="result-stats" style="max-width: 1000px; text-align: center"></div>
     <iframe id="iframe"></iframe>
   </body>
 
