--- a/apps/web/test1.html
+++ b/apps/web/test1.html
@@ -494,10 +494,10 @@
         fetchBinaryAsset('pdfs/normal.pdf'),
       ]);
 
-      const [
-        embeddedPage1,
-        embeddedPage2,
-      ] = await pdfDoc.embedPdf(normalPdfBytes, [0, 1]);
+      const [embeddedPage1, embeddedPage2] = await pdfDoc.embedPdf(
+        normalPdfBytes,
+        [0, 1],
+      );
       page4.drawPage(embeddedPage1, {
         x: 40,
         y: 100,
