--- a/apps/web/test1.html
+++ b/apps/web/test1.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+        default-src 'self' 'unsafe-inline' blob: resource:;
+        object-src 'self' blob:;
+        frame-src 'self' blob:;
+      "
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="/apps/web/index.css" />
     <title>Test 1</title>
-    <script type="text/javascript" src="/umd/pdf-lib.js"></script>
+    <script type="text/javascript" src="/umd/pdf-lib.min.js"></script>
     <script type="text/javascript" src="/apps/web/utils.js"></script>
   </head>
 
