--- a/apps/web/test11.html
+++ b/apps/web/test11.html
@@ -4,7 +4,7 @@
     <meta
       http-equiv="Content-Security-Policy"
       content="
-        default-src 'self' 'unsafe-inline' blob: resource: https://unpkg.com/@pdf-lib/fontkit/dist/fontkit.umd.js;
+        default-src 'self' 'unsafe-inline' blob: resource:;
         object-src 'self' blob:;
         frame-src 'self' blob:;
       "
@@ -14,12 +14,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="/apps/web/index.css" />
     <title>Test 11</title>
-    <script type="text/javascript" src="/dist/pdf-lib.min.js"></script>
+    <script type="text/javascript" src="/umd/pdf-lib.min.js"></script>
     <script type="text/javascript" src="/apps/web/utils.js"></script>
-    <script
-      type="text/javascript"
-      src="https://unpkg.com/@pdf-lib/fontkit/dist/fontkit.umd.js"
-    ></script>
   </head>
 
   <body>
@@ -95,8 +91,6 @@
       ]);
 
       const pdfDoc = await PDFDocument.create();
-
-      pdfDoc.registerFontkit(fontkit);
 
       const helveticaFont = await pdfDoc.embedFont(StandardFonts.Helvetica);
       const helveticaBoldFont = await pdfDoc.embedFont(
