--- a/apps/web/test3.html
+++ b/apps/web/test3.html
@@ -4,9 +4,9 @@
     <meta
       http-equiv="Content-Security-Policy"
       content="
-        default-src 'self' 'unsafe-inline' blob: resource: data:;
+        default-src 'self' 'unsafe-inline' blob: resource:;
         object-src 'self' data:;
-        frame-src 'self' data:;
+        frame-src 'self' data: blob:;
       "
     />
     <meta charset="UTF-8" />
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="/apps/web/index.css" />
     <title>Test 3</title>
-    <script type="text/javascript" src="/dist/pdf-lib.js"></script>
+    <script type="text/javascript" src="/umd/pdf-lib.js"></script>
     <script type="text/javascript" src="/apps/web/utils.js"></script>
   </head>
 
