--- a/apps/web/test4.html
+++ b/apps/web/test4.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="/apps/web/index.css" />
     <title>Test 4</title>
-    <script type="text/javascript" src="/dist/pdf-lib.min.js"></script>
+    <script type="text/javascript" src="/umd/pdf-lib.min.js"></script>
     <script type="text/javascript" src="/apps/web/utils.js"></script>
   </head>
 
