--- a/apps/web/test18.html
+++ b/apps/web/test18.html
@@ -24,7 +24,7 @@
         Prev
       </button>
       <button onclick="test()">Run Test</button>
-      <button disabled onclick="window.location.href = '/apps/web/test19.html'">
+      <button onclick="window.location.href = '/apps/web/test19.html'">
         Next
       </button>
     </div>
